# Genlabs_Tiktok

./: .gitignore  README.md  pyproject.toml
assets/carousels/auto-20260426T225334Z-sig-16/: manifest.json
assets/carousels/auto-20260426T230412Z-sig-24/: manifest.json
assets/carousels/auto-20260427T003706Z-sig-14/: manifest.json
assets/carousels/auto-20260427T030244Z-sig-10/: manifest.json
assets/carousels/auto-20260427T031525Z-sig-30/: manifest.json
assets/carousels/auto-20260428T025639Z-sig-47/: manifest.json
assets/carousels/auto-20260428T040653Z-sig-21/: manifest.json
assets/carousels/auto-20260428T052052Z-sig-42/: manifest.json
assets/carousels/auto-20260428T063327Z-sig-44/: manifest.json
assets/carousels/auto-20260429T063452Z-yt-fr78adfAnuA/: manifest.json
config/avatars/: 01-jay-noi-salon-clinic.yaml  02-pi-tu-fnb.yaml  03-khun-nat-real-estate.yaml  04-khun-ae-accountant.yaml  05-pi-nok-contractor.yaml  _index.yaml
config/runtime/: scoring_weights.yaml
docs/: asset-and-learning-index.md
docs/learnings/: 02_-_Decision_Log.md  07_-_Open_Loops.md
genlabs_engine/: __init__.py  _thai.py  avatars.py  cooldown.py  manifest.py  signals.py
genlabs_engine/discovery/: __init__.py  ingest.py  plan.py
genlabs_engine/ideation/: __init__.py  mint.py  score.py
genlabs_engine/voice/: __init__.py  pantip.py
scripts/: backfill_cooldown.py  cooldown_cli.py  cutover_stage.py  daily_auto_push.sh  idea_mint.py  voice_pantip_scrape.py  x_discover_ingest.py  x_discover_plan.py
tests/: test_cooldown.py  test_signals_and_ideation.py
(+683 files in other folders)
